# sqlite-forge

./: README.md  pyproject.toml
playarea/: testing.ipynb
sqlite_forge/: __init__.py  database.py  forger.py
